update brewfile, some new nvim configs etc. fine tuned after another couple days of use

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,9 +7,8 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'mrjones2014/smart-splits.nvim'
-
+set -g @plugin 'Peter-McKinney/tmux-open-file-nvim'
 
 
 # remap prefix to Control + a
@@ -18,6 +17,8 @@ unbind C-b
 bind C-a send-prefix
 
 set -g mouse on
+set -s set-clipboard on
+set -g allow-passthrough on
 
 unbind %
 bind | split-window -h
