--- a/.gitconfig
+++ b/.gitconfig
@@ -36,6 +36,14 @@
 
 [merge]
   conflictStyle = zdiff3
+  tool = lazygit
+
+[mergetool "lazygit"]
+  cmd = lazygit
+  # Use 'true' if lazygit runs within your current terminal window.
+  # Use 'false' if it launches in a new window/process.
+  trustExitCode = true 
+
 
 [alias]
   bug = "!f() { echo "$1" | xargs -I {} git checkout -b bug/{}; }; f"
@@ -44,7 +52,8 @@
   feature = "!f() { echo "$1" | xargs -I {} git checkout -b feature/{}; }; f"
   spike = "!f() { echo "$1" | xargs -I {} git checkout -b spike/{}; }; f"
   hotfix = "!f() { echo "$1" | xargs -I {} git checkout -b hotfix/{}; }; f"
-  cp = !git branch --show-current | tr -d '\n' | pbcopy
+  skip = update-index --skip-worktree
+  skipped = "!git ls-files -v | grep '^S'"
   oops = "reset HEAD~"
   wipe = "reset --hard HEAD"
   com = "!f() { b=$(git symbolic-ref --short HEAD); b=${b##*/}; b=${b%%_*}; git commit -a -m \"$b $1\"; }; f"
@@ -52,11 +61,14 @@
   lds = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn\\ %cr]" --decorate --date=short
   sofar = diff --name-only develop..
   standup = "!git log --since yesterday.0:00am --author `git config user.email` --pretty=short"
-  ignored = "ls-files --others -i"
+  ignored = ls-files --others -i --exclude-standard
   adog = log --all --decorate --oneline --graph
   sshow = "!f() { git stash show stash^{/$*} -p; }; f"
   sapply = "!f() { git stash apply stash^{/$*}; }; f"
   cleanmerged = !git branch --merged | grep -v \"\\*\" | grep -v develop | grep -v master | grep -v sqa | grep -v staging | grep -v loadtesting | grep -v production | xargs -n 1 git branch -d && git remote prune origin
+  
+  cp = !git branch --show-current | tr -d '\n' | pbcopy
+
   orphans = "!f() { (\
     git branch --format='%(refname:short) %(upstream)' | \
     awk '{if (!$2) print $1;}' | \
@@ -64,4 +76,5 @@
     )}; f"
   cleanorphans = !git orphans | xargs -n 1 git branch -D
   cleanup = !git cleanmerged && git cleanorphans
+  
 
