enable clipboard manipulation through kitty + ssh, make use of kitten for ssh an alias

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,7 @@
 map left_alt send_xim_event no
 
 allow_remote_control yes
+
+# Allow copying to clipboard via OSC 52         Allow pasting from clipboard via OSC 52
+clipboard_control write-clipboard write-primary read-clipboard read-primary
+
